# effective_mobile_test_task

./: pyproject.toml
src/: main.py
src/orders/: router.py
src/products/: router.py
