[tool.poetry]
name = "effective-mobile-test-task"
version = "0.1.0"
description = ""
authors = ["pinigun <72judo72@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
